# TrashMonkey

./: .claude-scratch.txt  .gitignore  CLAUDE.md  Makefile  README.md  paper.tex  pyproject.toml  refs.bib
.playwright-mcp/: page-2026-06-10T09-41-09-067Z.yml  page-2026-06-10T09-42-17-409Z.yml  page-2026-06-10T09-42-35-750Z.yml  page-2026-06-10T09-42-57-623Z.yml
configs/: a100.yaml  config.yaml  datasets.yaml  smoke.yaml
notebooks/: continue-eval.ipynb  manager.ipynb
reports/: tab_dataset_licenses.tex  tab_label_mapping.tex
research/: yolo11-waste-detection-finetune-summary.md  yolo11-waste-detection-finetune.md
src/trashmonkey/data/: attribution.py  balance.py  cache.py  dedup.py  split.py
src/trashmonkey/data/autobox/: __init__.py  birefnet.py  chain.py  dino.py  geometry.py  types.py
src/trashmonkey/data/download/: __init__.py  __main__.py  archive.py  cli.py  fetchers.py  pipeline.py  registry.py
src/trashmonkey/data/pipeline/: __init__.py  __main__.py  build.py  cli.py  context.py  runner.py
src/trashmonkey/data/pipeline/stages/: __init__.py  assemble.py  autobox.py  ingest.py  qa.py
src/trashmonkey/data/qa/: boxes.py  checks.py  crosscheck.py  report.py  review.py
src/trashmonkey/data/quality/: __init__.py  filter.py
src/trashmonkey/data/remap/: __init__.py  classification.py  detection.py  layout.py  manifest.py  names.py  pipeline.py
src/trashmonkey/data/split/: __init__.py  assign.py  emit.py  grouping.py  result.py
src/trashmonkey/deploy/: __init__.py  artifacts.py  export.py
src/trashmonkey/models/: evaluate.py  thresholds.py  train.py
src/trashmonkey/models/evaluation/: __init__.py  core.py  curves.py  degraded.py  detections.py  report.py
src/trashmonkey/models/thresholding/: __init__.py  artifacts.py  calibrate.py  consensus.py  run.py  simulate.py  tuner.py
src/trashmonkey/models/training/: __init__.py  autobatch.py  cli.py  core.py  escalation.py  guards.py  kwargs.py  runlog.py
src/trashmonkey/smoke/: __init__.py  __main__.py  cli.py  steps.py  workspace.py
src/trashmonkey/utils/: hashing.py  progress.py  seed.py
src/trashmonkey/utils/config/: __init__.py  loader.py  schema.py
src/trashmonkey/utils/degrade/: __init__.py  train_stack.py
src/trashmonkey/visualization/: __init__.py  composition.py  curves.py  degradation.py  loaders.py  openset.py  plots.py  severity.py  tiers.py  tradeoff.py  training.py
src/yolo_waste_sorter/data/: attribution.py  balance.py  split.py
src/yolo_waste_sorter/data/autobox/: __init__.py  birefnet.py  chain.py  dino.py  geometry.py  types.py
src/yolo_waste_sorter/data/download/: __init__.py  __main__.py  archive.py  cli.py  errors.py  fetchers.py  pipeline.py  registry.py
src/yolo_waste_sorter/data/pipeline/: __init__.py  __main__.py  cli.py  context.py  runner.py
src/yolo_waste_sorter/data/pipeline/stages/: __init__.py  assemble.py  autobox.py  ingest.py  qa.py
src/yolo_waste_sorter/data/qa/: __init__.py
src/yolo_waste_sorter/data/remap/: __init__.py  classification.py  detection.py  errors.py  layout.py  manifest.py  names.py  pipeline.py
src/yolo_waste_sorter/deploy/: __init__.py  __main__.py  artifacts.py  check_env.py  export.py  runtime.py  streams.py
src/yolo_waste_sorter/models/: evaluate.py  thresholds.py  train.py
src/yolo_waste_sorter/models/evaluation/: __init__.py  core.py  curves.py  degraded.py  detections.py  report.py
src/yolo_waste_sorter/models/thresholding/: __init__.py  artifacts.py  run.py  simulate.py  tuner.py
src/yolo_waste_sorter/models/training/: __init__.py  cli.py  core.py  guards.py  kwargs.py  resume.py  runlog.py  smoke.py
src/yolo_waste_sorter/smoke/: __init__.py  __main__.py  cli.py  fakes.py  fixtures.py  steps.py  workspace.py
src/yolo_waste_sorter/utils/: seed.py
src/yolo_waste_sorter/utils/config/: __init__.py  loader.py  schema.py
src/yolo_waste_sorter/utils/degrade/: __init__.py  severity.py  train_stack.py
src/yolo_waste_sorter/visualization/: __init__.py  composition.py  curves.py  loaders.py  plots.py  severity.py  style.py  tradeoff.py
tests/: conftest.py  deploy_helpers.py  item_helpers.py  test_attribution.py  test_autobatch.py  test_autobox.py  test_balance.py  test_cache.py  test_calibrate.py  test_config.py  test_dedup.py  test_degrade.py  test_deploy.py  test_deploy_artifacts.py  test_download.py  test_evaluate.py  test_pipeline.py  test_plots.py  test_plots_extended.py  test_progress.py  test_quality_filter.py  test_remap.py  test_resume.py  test_smoke.py  test_split.py  test_thresholds.py  test_train.py
tests/fixtures/smoke/: datasets.yaml
tests/qa/: helpers.py  test_checks.py  test_iou.py  test_report.py  test_review.py
