[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "trashmonkey"
version = "0.1.0"
description = "TrashMonkey: fine-tune YOLO11n for six-class waste detection (plastic, paper, cardboard, metal, glass, organic) from public datasets, with open-set rest rejection and multi-format export"
license = { text = "AGPL-3.0-or-later" }
requires-python = ">=3.11"
dependencies = [
    "ultralytics>=8.3,<9",
    "pyyaml>=6,<7",
    "albumentations>=2.0,<3",
    "imagehash>=4.3,<5",
    # Deploy runtime (015/T8): MJPEG capture + image IO. A true runtime dep --
    # albumentations only pulls it transitively.
    "opencv-python-headless>=4.10,<5",
    # Visualization module (figures are product code, not research-only).
    "matplotlib>=3.8,<4",
    "seaborn>=0.13,<0.14",
]

[project.optional-dependencies]
dev = ["pytest", "mypy", "ruff", "types-PyYAML"]
research = ["numpy", "pandas", "matplotlib", "jupyter"]
# Auto-boxing chain (T3). Grounding DINO via transformers' native
# zero-shot-detection model (IDEA-Research/grounding-dino-tiny) -- the
# third-party autodistill/groundingdino fork breaks against modern transformers
# (BertModel.get_head_mask), so we use the maintained transformers path instead.
# rembg's BiRefNet session ships in the base package (>=2.0.59) and runs as the
# autobox FALLBACK (DINO-primary). Use the [cpu] extra (onnxruntime CPU): the
# [gpu] extra pulls onnxruntime-gpu built for a CUDA major that does not match
# Colab's runtime (libcudart.so.13 vs CUDA 12.x), and rembg sys.exit(1)s on that
# import failure -- killing the whole build. CPU onnxruntime has no CUDA
# dependency, so it always imports. torch comes from ultralytics (core dep).
boxing = [
    "transformers>=4.40,<5",
    "rembg[cpu]>=2.0.59,<3",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
# Untyped / optional third-party imports: PyYAML ships no stubs; numpy/torch
# are optional imports in utils.seed; the boxing deps are lazy imports;
# seaborn ships no py.typed marker.
module = [
    "yaml",
    "numpy",
    "numpy.*",
    "torch",
    "torch.*",
    "ultralytics",
    "ultralytics.*",
    "albumentations",
    "albumentations.*",
    "transformers",
    "transformers.*",
    "rembg",
    "imagehash",
    "seaborn",
    "seaborn.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "slow: end-to-end smoke runs (deselect with -m 'not slow')",
]
